# astro-example-dags

./: .gitignore  CLAUDE.md  fly.toml
data-kingdom/: .gitignore  README.md  pyproject.toml
data-kingdom/pattern-books/: fact-table.yaml  public-holding.yaml
data-kingdom/realms/analytics/: realm.yaml
data-kingdom/realms/analytics/treaties/: dau_daily.yaml
data-kingdom/realms/core/: realm.yaml
data-kingdom/realms/core/treaties/: user_dimension.yaml
data-kingdom/src/data_kingdom/: __init__.py  cli.py
data-kingdom/src/data_kingdom/campaign/: __init__.py  coordinator.py
data-kingdom/src/data_kingdom/court/: __init__.py  judge.py  trials.py
data-kingdom/src/data_kingdom/guild/: __init__.py  models.py  post_master.py  spawner.py
data-kingdom/src/data_kingdom/ledger/: __init__.py  ids.py  records.py  storage.py
data-kingdom/src/data_kingdom/pattern/: __init__.py  loader.py  models.py  registry.py
data-kingdom/src/data_kingdom/realm/: __init__.py  loader.py  models.py  registry.py
dungeon-crawler-carl/: .dockerignore  .gitattributes  .gitignore  ABILITY-CONCEPTS.md  ASSETS.md  BACKLOG.md  BALANCE-NOTES.md  BIOMES.md  BUILDER.md  CLAUDE.md  DEPLOY.md  DESIGN.md  Dockerfile  GENERATION-BACKLOG.md  KAYKIT-INVENTORY.md  MEGAFLOORS.md  MOB-CONCEPTS.md  PERSISTENCE.md  PHYSICALITY.md  README.md  SETTLEMENTS.md  STYLEGUIDE.md  VOICE.md  builder.html  fly.toml  index.html  iso.html  litestream.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
dungeon-crawler-carl/scripts/: balance-sweep.ts  compress-assets.mjs  fetch-assets.sh  loadtest.mjs  (+1 more)
(+368 files in other folders)
